[package]
name = "control_cheat"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ilhook = "1.3"
winapi = { version="0.3.9", features=["winuser","winnt", "libloaderapi", "consoleapi"] }
user32-sys = "0.2.0"