[package]
name = "control_cheat"
version = "0.1.0"
edition = "2018"

[lib]
name = "control_cheat_dll"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version="0.3.9", features=["winuser","winnt", "libloaderapi", "consoleapi", "memoryapi"] }
user32-sys = "0.2.0"
sysinfo = "0.20.0"